objects/copado__Deployment_Job__c.object
<CustomObject>
    <fields>
        <fullName>copado__Destination_Org__c</fullName>
        <label>Destination Org</label>
        <referenceTo>copado__Destination_Org__c</referenceTo>
        <relationshipLabel>Deployment Jobs</relationshipLabel>
        <relationshipName>Deployment_Jobs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>copado__Early_Completion_Status__c</fullName>
        <label>Early Completion Status</label>
        <picklist>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In progress</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>copado__Status_Flag__c</fullName>
        <formula>IMAGE( 
  CASE(copado__Status__c,  
  &quot;Success&quot;, &quot;/img/samples/flag_green.gif&quot;,
  &quot;Failed&quot;, &quot;/img/samples/flag_red.gif&quot;,
  &quot;In progress&quot;, &quot;/img/loading.gif&quot;,
  &quot;/s.gif&quot;), 
   &quot;&quot; )</formula>
        <label>Status Flag</label>
        <type>Text</type>
    </fields>
</CustomObject>